# pymurmur

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt
src/: MurmurHash1.c  endian.h  pymurmur.c  pymurmur.pyi
